--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>xpensify</title>
   <link rel="icon" href="./favicon.png" type="image/png">
+  <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 
 <body>
